gen/translate/v2/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-translate2 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/translate/v2/lib)
error[E0412]: cannot find type `DetectionsResource` in module `crate::schemas`
  --> gen/translate/v2/lib/src/lib.rs:35:52
   |
35 |         pub detections: Option<Vec<crate::schemas::DetectionsResource>>,
   |                                                    ^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `DetectionsResourceItems`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
error: Could not compile `google-translate2`.

To learn more, run the command again with --verbose.
